# keychain

crates/keychain-cli/: Cargo.toml
crates/keychain-cli/src/: main.rs
crates/keychain-daemon/: Cargo.toml
crates/keychain-daemon/src/: client.rs  main.rs
crates/keychain-protocol/: Cargo.toml
crates/keychain-protocol/src/: encode.rs  error.rs  lib.rs  packet.rs  stream.rs
