[package]
name = "keychain-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = { version = "2.4.2", features = ["async", "tokio"] }
tokio = { version = "1.52.4", features = ["macros", "rt-multi-thread"] }
keychain-protocol = { path="../keychain-protocol" }
bytes = "1.12.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
